== Changelog

=== 2.0 (19.12.2016)
* upgrade to guava 20.0
* upgrade to mockito-core 2.3.7

=== 1.9.7 (29.08.2016)
* Make method Web.renderPage() public - it now can be reused from other controllers

=== 1.9.6 (16.06.2016)
* support status C (Copied)

=== 1.9.5 (25.12.2015)
* upgrade to guava 19.0

=== 1.9.4 (12.11.2015)
* add delimiter after hyphens as Firefox does not wrap them

=== 1.9.1 (18.09.2015)
* upgrade ckeditor to 4.5.3