@@ -22,7 +22,7 @@
 
 <p>В любом случае, все изменения производятся в тестовой среде, где можно удостоверится в их правильности.</p>
 <p>
-  Затем, и вебмастер и редактор должны <a href="@{WebAdmin.status()}">опубликовать</a> свои изменения, чтобы они попали в боевую среду.
+  Затем, и вебмастер и редактор должны <a href="/webadmin/status">опубликовать</a> свои изменения, чтобы они попали в боевую среду.
   При этом желательно оставить также комментарий, кратко описывающий причину сделанных изменений.
   После публикации изменения появляются в боевой среде в течение 5-10 минут.
 </p>
